--- a/public/html/regexp.html
+++ b/public/html/regexp.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JSCODE</title>
+  <title>Regular Expression</title>
 </head>
 <body>
-  <a href="./html/regexp.html">Regular Expression</a>
+  <div>
+    <p>U.S. postal code 99999-9999</p>
+  </div>
+
+  <script src="../javascripts/jquery-3.3.1.js"></script>
+  <script src="../javascripts/regexp.js"></script>
 </body>
 </html>
