--- a/public/html/es6.html
+++ b/public/html/es6.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>JSCODE</title>
+  <title>ES6</title>
 </head>
 <body>
-  <div>
-    <a href="./html/regexp.html">Regular Expression</a>
+  <div id="container">
+    <p>Hello</p>
   </div>
-  <div>
-    <a href="./html/es6.html">ES6</a>
-  </div>
+  <script src="../javascripts/jquery-3.3.1.js"></script>
+  <script src="../javascripts/es6.js"></script>
 </body>
 </html>
