--- a/public/html/es6.html
+++ b/public/html/es6.html
@@ -10,6 +10,7 @@
   <div id="container">
   </div>
   <script src="../javascripts/jquery-3.3.1.js"></script>
+  <script src="../javascripts/txt-helpers.js"></script>
   <script src="../javascripts/es6.js"></script>
 </body>
 </html>
