--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,8 @@
   <div>
     <a href="./html/es6.html">ES6</a>
   </div>
+  <div>
+    <a href="./html/fp.html">Functional Programming</a>
+  </div>
 </body>
 </html>
