--- a/public/html/fpclock.html
+++ b/public/html/fpclock.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Functional Programming</title>
+  <title>Functional Programming Sample: Clock</title>
 </head>
 <body>
   <script src="../javascripts/jquery-3.3.1.js"></script>
-  <script src="../javascripts/fp.js"></script>
+  <script src="../javascripts/fpclock.js"></script>
 </body>
 </html>
