--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,8 @@
   <div>
     <a href="./html/fp.html">Functional Programming</a>
   </div>
+  <div>
+    <a href="./html/fpclock.html">Functional Programming Sample: Clock</a>
+  </div>
 </body>
 </html>
